tests/baselines/reference/parserIndexMemberDeclaration10.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration10.ts(2,11): error TS1030: 'static' modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration10.ts (1 errors) ====
    class C {
       static static [x: string]: string;
              ~~~~~~
!!! error TS1030: 'static' modifier already seen.
    }